--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,12 +4,12 @@ site_url: https://gamex-network.github.io/
 
 theme:
   name: material
+  logo: null
+  favicon: null
   language: en
   features:
     - navigation.tabs
     - navigation.top
-    - search.suggest
-    - search.highlight
 
 nav:
   - Home: index.md
